#34 KRX 수집 병렬화 + KIS 상세 수집 서비스 분리
- KRX StockCollectionService: date×market 평탄화, race condition 수정
- CollectionProgress capturing/offset으로 KRX→KIS 진행률 연결
- KrxProperties 도입, per-second=15 기본값 코드화
- collection.concurrency 설정 통일
- StockDetailCollectionService 도메인 모듈로 분리
- logback 타임존 수정